# exllamav3-inference

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  setup.py  test_with_model.py
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_decode.py  bench_memory.py  bench_prefill.py
src/exllamav3/: __init__.py  model_init.py
src/exllamav3/architecture/: apertus.py  arcee.py  architectures.py  cohere.py  cohere2.py  decilm.py  deepseek_v2.py  deepseek_vl2.py  dots1.py  ernie4_5.py  ernie4_5_moe.py  exaone4.py  gemma2.py  gemma3.py  glm4.py  glm4_moe.py  glm4v.py  hcxvisionv2.py  hyperclovax.py  iquestcoder.py  llama.py  mimo.py  minimax_m2.py  mistral.py  mistral3.py  mixtral.py  nanochat.py  olmo3.py  phi3.py  qwen2.py  qwen2_5_vl.py  qwen3.py  qwen3_5.py  qwen3_moe.py  qwen3_next.py  qwen3_vl.py  seedoss.py  smollm3.py  solar_open_moe.py
src/exllamav3/cache/: fp16.py  quant.py  recurrent.py
src/exllamav3/exllamav3_ext/: gnd.cu
src/exllamav3/generator/: __init__.py
src/exllamav3/generator/sampler/: custom.py  presets.py  sampler.py
src/exllamav3/loader/: safetensors.py
src/exllamav3/model/: model_tp_alloc.py  model_tp_backend.py  model_tp_cuda.py  model_tp_fn.py
src/exllamav3/modules/: attn.py  block_sparse_mlp.py  conv.py  deepseek_v2_mla_attn.py  deepstack.py  embedding.py  gated_delta_net.py  gated_rmsnorm.py  gather.py  glm4v_pos_embedding.py  layernorm.py  linear.py  mlp.py  pos_embedding.py  qwen3_vl_pos_embedding.py  rmsnorm.py  transformer.py
src/exllamav3/modules/quant/exl3_lib/: quantize.py
src/exllamav3/util/: arch_list.py  debug.py  file.py  measures.py  memory.py  misc.py  profile_opt.py  progress.py  rope.py  vision.py
src/exllamav3_opt/: __init__.py  compile.py  cuda_graphs.py  fp8_cache.py  generator.py  integration.py  prefix_cache.py  speculative.py  tensor_pool.py  threading.py
src/exllamav3_opt/_ext/: __init__.py  bindings.cpp  fp8_cache_kernels.cu  fused_rmsnorm_residual.cu  fused_sampling.cu
tests/: conftest.py  test_fp8_cache.py  test_fused_kernels.py  test_generator.py  test_integration.py  test_prefix_cache.py
