[build-system]
requires = ["setuptools>=75.0", "torch>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exllamav3-inference"
version = "0.2.0"
description = "Single-user optimized inference wrapper for ExLlamaV3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "nicokim" },
]
keywords = ["exllamav3", "inference", "llm", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6.0",
    "flashinfer-python>=0.6.3",
    "tokenizers>=0.22.0",
    "numpy>=2.4.0",
    "safetensors>=0.7.0",
    "typing_extensions>=4.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
